--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>App</title>
+  <title>FullClima</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
@@ -14,11 +14,19 @@
  
 <nav class="navbar navbar-expand-lg bg-light fixed-top">
   <div class="container">
-    <a class="navbar-brand" href="#">App</a>
+    <a class="navbar-brand" href="/">FullClima</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
+          <a class="nav-link <%= 'active' if current_page?(terms_path) %>" href="/terms">Terms</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link <%= 'active' if current_page?(contact_path) %>" href="/contact">Contact</a>
+        </li>
+      </ul>
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
           <a class="nav-link" href="#">Login</a>
@@ -30,6 +38,7 @@
     </div>
   </div>
 </nav>
+
       <%# Message %>
        <p class="notice"><%= notice %></p>
        <p class="alert"><%= alert %></p>
