--- a/app/views/contact/index.html.erb
+++ b/app/views/contact/index.html.erb
@@ -4,21 +4,18 @@
       <div class="card">
         <h3 class="card-header">Contactanos</h3>
         <div class="card-body">
-          <%= form_with(model: @message, url: messages_path, class: 'form') do |form| %>
+          <%= form_with(model: @message, url: contact_create_path, class: 'form') do |form| %>
             <div class="mb-3">
               <%= form.label :nombre, class: 'form-label' %>
-              <%= form.text_field :nombre, class: 'form-control', placeholder: 'Ingresa nombre', required: true %>
-              <span class="text-muted small">*Requerido</span>
+              <%= form.text_field :nombre, name: 'message[nombre]', class: 'form-control', placeholder: 'Ingresa nombre', required: true %>
             </div>
             <div class="mb-3">
               <%= form.label :email, class: 'form-label' %>
-              <%= form.email_field :email, class: 'form-control', placeholder: 'Ingresa email', required: true %>
-              <span class="text-muted small">*Requerido</span>
+              <%= form.email_field :email, name: 'message[email]', class: 'form-control', placeholder: 'Ingresa email', required: true %>
             </div>
             <div class="mb-3">
               <%= form.label :mensaje, class: 'form-label' %>
-              <%= form.text_area :mensaje, class: 'form-control', rows: 5, placeholder: 'Ingresa un mensaje', required: true %>
-              <span class="text-muted small">*Requerido</span>
+              <%= form.text_area :mensaje, name: 'message[mensaje]', class: 'form-control', rows: 5, placeholder: 'Ingresa un mensaje', required: true %>
             </div>
             <%= form.submit 'Enviar', class: 'btn btn-primary' %>
           <% end %>
