--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,10 @@
     <div class="col-12">
       <div class="card">
         <div class="card-body">
-          Hola mundo
+          <h1 class="text-center fw-bold">
+          Optimiza tus mantenimientos y maximiza tu eficiencia.<br> FullClima, la solución digital para una gestión sin caos.
+          </h1>
+          <%= image_tag(image_path('icon1.svg'), alt: 'Descripción de la imagen') %>
         </div>
       </div>
     </div>
