--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,10 +1,12 @@
-    <div class="col-12">
+    <div class="col-10 mx-auto">
       <div class="card">
         <div class="card-body">
-          <h1 class="text-center fw-bold">
+          <h1 class="text-center fw-bold mb-4">
           Optimiza tus mantenimientos y maximiza tu eficiencia.<br> FullClima, la solución digital para una gestión sin caos.
           </h1>
-          <%= image_tag(image_path('icon1.svg'), alt: 'Descripción de la imagen') %>
+          <div class="text-center">
+          <%= image_tag "service.png", class: "img-fluid", style: "width: 200px; height: 200px;", alt: "cover" %>
+        </div>
         </div>
       </div>
     </div>
