--- a/app/views/equipment/index.html.erb
+++ b/app/views/equipment/index.html.erb
@@ -1,15 +1,35 @@
-<p style="color: green"><%= notice %></p>
-<div class="col-6 mx-auto">
+<div class="col-4 mx-auto">
+<% if notice.present? %>
+  <div id="success-alert" class="alert alert-success" role="alert">
+    <%= notice %>
+  </div>
+
+
+  <script>
+    document.addEventListener('DOMContentLoaded', function() {
+      var successAlert = document.getElementById('success-alert');
+
+      setTimeout(function() {
+        successAlert.style.display = 'none';
+      }, 6000);
+    });
+  </script>
+<% end %>
+
 <h1 class="text-center fw-bold mb-4">Equipment</h1>
 
 <%= link_to "New equipment", new_equipment_path, class: "btn btn-success mb-2" %>
 <div id="equipment">
   <% @equipment.each do |equipment| %>
     <%= render equipment %>
-    <p>
-      <%= link_to "Show this equipment", equipment %>
-    </p>
   <% end %>
+    <div>
+      <%= will_paginate @equipment, class: "pagination justify-content-center" do |paginator| %>
+        <%= paginator.page_numbers class: "page-item" %>
+        <%= paginator.previous_page class: "page-item" %>
+        <%= paginator.next_page class: "page-item" %>
+      <% end %>
+    </div>
 </div>
 
 <div>
