--- a/app/views/equipment/show.html.erb
+++ b/app/views/equipment/show.html.erb
@@ -1,10 +1,16 @@
 <p style="color: green"><%= notice %></p>
-
+<div class="col-4 mx-auto">
 <%= render @equipment %>
-
 <div>
-  <%= link_to "Edit this equipment", edit_equipment_path(@equipment) %> |
-  <%= link_to "Back to equipment", equipment_index_path %>
 
-  <%= button_to "Destroy this equipment", @equipment, method: :delete %>
+<div class="d-flex justify-content-between">
+<div>
+<%= link_to "Volver", equipment_index_path, class: "btn btn-outline-secondary" %>
+<%= link_to "Editar", edit_equipment_path(@equipment), class: "btn btn-primary" %>
 </div>
+<% if current_user.admin? %>
+  <%= button_to "Eliminar", @equipment, method: :delete, class: "btn btn-danger", data: { confirm: "Are you sure?" } %>
+<% end %>
+</div>
+
+
