--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,11 +30,16 @@
         
 <ul class="navbar-nav ms-auto">
   <% if user_signed_in? %>
-    <li class="nav-item">
+    <li class="nav-item me-2">
       <a class="nav-link <%= 'active' if current_page?(equipment_index_path) %>" href="<%= equipment_index_path %>">Equipment</a>
     </li>
+     <li class="nav-item me-2">
+      <a class="nav-link <%= 'active' if current_page?(mantainers_path) %>" href="<%= mantainers_path %>">Mantainers</a>
+    </li>
     <li class="nav-item">
-      <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "nav-link" %>
+      <%= form_tag destroy_user_session_path, method: :delete, class: "navbar-form" do %>
+        <%= submit_tag "Logout", class: "btn btn-outline-primary" %>
+      <% end %>
     </li>
   <% else %>
     <li class="nav-item">
