--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,11 @@
  
 <nav class="navbar navbar-expand-lg bg-light fixed-top">
   <div class="container">
-    <a class="navbar-brand" href="/">FullClima</a>
+    <a class="navbar-brand" href="/">FullClima 
+    <% if user_signed_in? %>
+       | <%= current_user&.admin&.capitalize %>
+    <% end %>
+    </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
