--- a/app/views/mantainers/_form.html.erb
+++ b/app/views/mantainers/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_with(model: mantainer) do |form| %>
   <% if mantainer.errors.any? %>
-    <div style="color: red">
+    <div class="alert alert-danger">
       <h2><%= pluralize(mantainer.errors.count, "error") %> prohibited this mantainer from being saved:</h2>
 
       <ul>
@@ -11,32 +11,44 @@
     </div>
   <% end %>
 
-  <div>
-    <%= form.label :type_equipment, style: "display: block" %>
-    <%= form.text_field :type_equipment %>
+  <div class="mb-3">
+    <%= form.label :type_equipment, class: "form-label" %>
+    <%= form.text_field :type_equipment, class: "form-control" %>
+  </div>
+
+ <div class="mb-3">
+  <%= form.label :type_support, class: "form-label" %>
+  <%= form.select :type_support, options_for_select(["Pendiente", "Selectivo", "Correctivo"], selected: mantainer.type_support), {}, class: "form-control" %>
+</div>
+
+
+  <div class="mb-3">
+    <%= form.label :name, class: "form-label" %>
+    <%= form.text_field :name, class: "form-control" %>
+  </div>
+
+ <div class="mb-3">
+  <%= form.label :city, class: "form-label" %>
+  <%= form.select :city, ['Santiago de Chile', 'Temuco', 'Antofagasta', 'Valparaíso', 'Concepción'], { prompt: 'Seleccione una ciudad' }, class: "form-control" %>
+
+</div>
+
+  <div class="mb-3">
+    <%= form.label :material, class: "form-label" %>
+    <%= form.select :material, ['Filtros de aire', 'Aceite lubricante', 'Termostato', 'Bobinas de condensador', 'Refrigerante', 'Condensador', 'Ventilador', 'Válvulas de expansión', 'Bomba de calor', 'Sensores de temperatura'], { prompt: 'Seleccione un material' }, class: "form-control" %>
+  </div>
+
+<div class="mb-3">
+    <%= form.label :photo, class: "form-label" %>
+    <%= form.file_field :photo, class: "form-control" %>
+  </div>
+  
+  <div class="mb-3">
+    <%= form.label :email, class: "form-label" %>
+    <%= form.text_field :modified_by_email, class: "form-control" %>
   </div>
 
   <div>
-    <%= form.label :type_support, style: "display: block" %>
-    <%= form.text_field :type_support %>
-  </div>
-
-  <div>
-    <%= form.label :name, style: "display: block" %>
-    <%= form.text_field :name %>
-  </div>
-
-  <div>
-    <%= form.label :city, style: "display: block" %>
-    <%= form.text_field :city %>
-  </div>
-
-  <div>
-    <%= form.label :material, style: "display: block" %>
-    <%= form.text_field :material %>
-  </div>
-
-  <div>
-    <%= form.submit %>
+    <%= form.submit "Save", class: "btn btn-primary" %>
   </div>
 <% end %>
