--- a/app/views/equipment/_equipment.html.erb
+++ b/app/views/equipment/_equipment.html.erb
@@ -6,11 +6,15 @@
     <p class="card-text"><strong>Description:</strong> <%= equipment.description %></p>
 
      <% if equipment.photo.present? %>
-      <%= image_tag equipment.photo.url, class: "card-img-top" %>
+     <div class="d-flex justify-content-center align-items-center">
+      <%= image_tag equipment.photo.url, class: "card-img-top",style: "max-width: 200px; max-height: 200px;" %>
+     </div>
       <% else %>
-        <%= image_tag "default.png", class: "card-img-top" %>
+      <div class="d-flex justify-content-center align-items-center">
+        <%= image_tag "default.png", class: "card-img-top",style: "max-width: 200px; max-height: 200px;" %>
+        </div>
       <% end %>
-
+<hr>
     <% unless current_page?(equipment_path(equipment)) %>
       <%= link_to "Mostrar", equipment, class: "btn btn-primary" %>
     <% end %>
