--- a/app/views/equipment/new.html.erb
+++ b/app/views/equipment/new.html.erb
@@ -1,9 +1,15 @@
-<h1>New equipment</h1>
+<div class="col-4 mx-auto">
+  <div class="card">
+    <div class="card-body">
+      <h1>New equipment</h1>
 
-<%= render "form", equipment: @equipment %>
+      <%= render "form", equipment: @equipment %>
 
-<br>
+      <hr>
 
-<div>
-  <%= link_to "Back to equipment", equipment_index_path %>
+      <div>
+        <%= link_to "Volver", equipment_index_path, class: "btn btn-outline-secondary" %>
+      </div>
+    </div>
+  </div>
 </div>
