--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,8 +13,83 @@
  *= require_tree .
  *= require_self
  */
+@import "reset";
+@import "scroll-style";
 @import "bootstrap";
 
+:root {
+    --navbar: 56px;
+}
+
 body {
-    background-color: #ffff;
+    background-color: #163771;
+    font-family: 'Roboto', sans-serif;
+}
+
+.main-container {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    min-height: 100vh;
+    padding-bottom: 1rem;
+    padding-top: calc(var(--navbar) + 1rem);
+}
+
+.container {
+
+    &__card {
+        background: #fafafa;
+        border-radius: 1rem;
+        padding: 3rem;
+        box-shadow: 20px 20px 60px #132f60,
+            -20px -20px 60px #0b2655;
+    }
+
+    &__img {
+        display: flex;
+        justify-content: center;
+        margin-bottom: 2rem;
+        text-align: center;
+    }
+
+    &__h1 {
+        color: #163771;
+        font-size: 3rem;
+        font-weight: 700;
+        text-align: center;
+    }
+
+    &__h2 {
+        font-size: 2rem;
+        font-weight: 700;
+        margin: 0;
+        text-align: center;
+    }
+
+    &__h3 {
+        font-size: 1.6rem;
+        font-weight: 500;
+        margin: 0;
+        text-align: center;
+    }
+}
+
+@media screen and (max-width: 460px) {
+    .container {
+        &__card {
+            padding: 2rem;
+        }
+
+        &__h1 {
+            font-size: 1.4rem;
+        }
+
+        &__h2 {
+            font-size: 1.3rem;
+        }
+
+        &__h3 {
+            font-size: 1rem;
+        }
+    }
 }
