--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,79 +1,75 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>FullClima</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <%= csrf_meta_tags %>
-  <%= csp_meta_tag %>
-
-  <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
-  <%= javascript_importmap_tags %>
-</head>
-
-<body style="padding-top: 70px;">
- 
-<nav class="navbar navbar-expand-lg bg-light fixed-top">
-  <div class="container">
-    <a class="navbar-brand" href="/">FullClima 
-    <% if user_signed_in? %>
-       | <%= current_user&.admin&.capitalize %>
-    <% end %>
-    </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item">
-          <a class="nav-link <%= 'active' if current_page?(terms_path) %>" href="/terms">Terms</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link <%= 'active' if current_page?(contact_path) %>" href="/contact">Contact</a>
-        </li>
-      </ul>
-        
-<ul class="navbar-nav ms-auto">
-  <% if user_signed_in? %>
-    <li class="nav-item me-2">
-      <a class="nav-link <%= 'active' if current_page?(equipment_index_path) %>" href="<%= equipment_index_path %>">Equipment</a>
-    </li>
-     <li class="nav-item me-2">
-      <a class="nav-link <%= 'active' if current_page?(mantainers_path) %>" href="<%= mantainers_path %>">Mantainers</a>
-    </li>
-    <li class="nav-item">
-      <%= form_tag destroy_user_session_path, method: :delete, class: "navbar-form" do %>
-        <%= submit_tag "Logout", class: "btn btn-outline-primary" %>
+  <head>
+    <title>FullClima</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <%= favicon_link_tag "favicon.png" %>
+    <meta name="description" content="Effortlessly manage AC maintenance and repairs with our streamlined app.">
+    <meta name="keywords" content="air conditioning, AC maintenance, repair management, HVAC solutions">
+    <meta name="author" content="Cristóbal Manzano">
+    <%= csrf_meta_tags %>
+    <%= csp_meta_tag %>
+    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+    <%= javascript_importmap_tags %>
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-lg bg-light fixed-top">
+      <div class="container">
+        <a class="navbar-brand" href="/">FullClima 
+          <% if user_signed_in? %>
+            | <%= current_user&.admin&.capitalize %>
+          <% end %>
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link <%= 'active' if current_page?(terms_path) %>" href="/terms">Terms</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link <%= 'active' if current_page?(contact_path) %>" href="/contact">Contact</a>
+            </li>
+          </ul>
+          <ul class="navbar-nav ms-auto">
+            <% if user_signed_in? %>
+              <li class="nav-item me-2">
+                <a class="nav-link <%= 'active' if current_page?(equipment_index_path) %>" href="<%= equipment_index_path %>">Equipment</a>
+              </li>
+              <li class="nav-item me-2">
+                <a class="nav-link <%= 'active' if current_page?(mantainers_path) %>" href="<%= mantainers_path %>">Mantainers</a>
+              </li>
+              <li class="nav-item">
+                <%= form_tag destroy_user_session_path, method: :delete, class: "navbar-form" do %>
+                  <%= submit_tag "Logout", class: "btn btn-outline-primary" %>
+                <% end %>
+              </li>
+            <% else %>
+              <li class="nav-item">
+                <a class="nav-link <%= 'active' if current_page?(new_user_session_path) %>" href="<%= new_user_session_path %>">Login</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link <%= 'active' if current_page?(new_user_registration_path) %>" href="<%= new_user_registration_path %>">Sign up</a>
+              </li>
+            <% end %>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <div class="main-container">
+      <%# Message %>
+      <% if flash[:success] %>
+        <div id="flash-message" class="alert alert-success" role="alert">
+          <%= flash[:success] %>
+        </div>
       <% end %>
-    </li>
-  <% else %>
-    <li class="nav-item">
-      <a class="nav-link <%= 'active' if current_page?(new_user_session_path) %>" href="<%= new_user_session_path %>">Login</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link <%= 'active' if current_page?(new_user_registration_path) %>" href="<%= new_user_registration_path %>">Sign up</a>
-    </li>
-  <% end %>
-</ul>
-
-
+      <%= yield %>
     </div>
-  </div>
-</nav>
-
-<div class="container mb-4">
-<%# Message %>
-  <% if flash[:success] %>
-    <div id="flash-message" class="alert alert-success" role="alert">
-      <%= flash[:success] %>
-    </div>
-  <% end %>
-  <%= yield %>
-</div>
-
-<script>
-  setTimeout(function() {
-    document.getElementById('flash-message').style.display = 'none';
-  }, 6000);
-</script>
-</body>
+    <script>
+      setTimeout(function() {
+        document.getElementById('flash-message').style.display = 'none';
+      }, 6000);
+    </script>
+  </body>
 </html>
