--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,13 +1,16 @@
-    <div class="col-10 mx-auto">
-      <div class="card">
-        <div class="card-body">
-          <h1 class="text-center fw-bold mb-4">
-          Optimiza tus mantenimientos y maximiza tu eficiencia.<br> FullClima, la solución digital para una gestión sin caos.
-          </h1>
-          <div class="text-center">
-          <%= image_tag "service.png", class: "img-fluid", style: "width: 200px; height: 200px;", alt: "cover" %>
-        </div>
-        </div>
-      </div>
+<div class="container">
+  <div class="container__card">
+    <div class="container__img">
+      <%= image_tag "service.png", class: "img-fluid", style: "width: 200px; height: 200px;", alt: "cover" %>
     </div>
-
+    <h1 class="container__h1">
+      FullClima
+    </h1>
+    <h2 class="container__h2">
+      The streamlined solution for organized management        
+    </h2>
+    <h3 class="container__h3">
+      Optimize your maintenance and maximize your efficiency.
+    </h3>
+  </div>
+</div>
