--- a/app/views/terms/index.html.erb
+++ b/app/views/terms/index.html.erb
@@ -1,34 +1,29 @@
-    <div class="col-12">
-      <div class="card">
-        <h3 class="card-header">Términos y Condiciones Legales de FullClima</h3>
-        <div class="card-body">
-          <p class="card-text">
-            <p>Bienvenido a FullClima. Estos términos legales ("Términos") establecen los derechos y obligaciones legales que rigen el uso de nuestro sitio web y servicios relacionados. Al acceder o utilizar nuestro sitio web, estás aceptando estos Términos y aceptas cumplir con todas las leyes y regulaciones aplicables. Si no estás de acuerdo con alguno de estos términos, por favor, no utilices nuestro sitio web.</p>
- 
-            <p>Propiedad Intelectual
-            Todos los derechos de propiedad intelectual relacionados con el contenido y la información presentada en nuestro sitio web pertenecen a FullClima o a terceros licenciantes. No se otorga ningún derecho de propiedad intelectual por el uso de nuestro sitio web o servicios.
-            </p>
-      
-            <p>Uso del Sitio Web
-            Estás autorizado a utilizar nuestro sitio web con fines legales y de acuerdo con estos Términos. No se permite utilizar nuestro sitio web para actividades ilegales, difamatorias, ofensivas, que infrinjan los derechos de terceros o que violen cualquier ley aplicable.
-            </p>
-     
-            <p>Privacidad
-            El uso de la información personal proporcionada a través de nuestro sitio web se rige por nuestra Política de Privacidad. Al utilizar nuestro sitio web, aceptas nuestro tratamiento de la información personal de acuerdo con dicha política.
-            </p>
-       
-            <p>Limitación de Responsabilidad
-            FullClima no se hace responsable de los daños directos, indirectos, incidentales, especiales o consecuentes que puedan surgir del uso de nuestro sitio web o de la imposibilidad de acceder a él.</p>
-         
-            <p>Enlaces a Terceros
-            Nuestro sitio web puede contener enlaces a sitios web de terceros. Estos enlaces se proporcionan únicamente para tu conveniencia. No tenemos control sobre el contenido de estos sitios web y no asumimos ninguna responsabilidad por ellos.
-            </p>
-        
-            <p>
-            Modificaciones
-            FullClima se reserva el derecho de modificar, suspender o interrumpir cualquier aspecto de nuestro sitio web o servicios en cualquier momento y sin previo aviso.
-            </p>
-          </p>
-        </div>
-      </div>
+<div class="container">
+  <div class="container__card">
+    <h3 class="container__h3">Términos y Condiciones Legales de FullClima</h3>
+    <div class="card-body">
+      <p class="card-text">
+        <p>Welcome to FullClima. These legal terms ("Terms") establish the legal rights and obligations governing the use of our website and related services. By accessing or using our website, you are agreeing to these Terms and agreeing to comply with all applicable laws and regulations. If you do not agree with any of these terms, please do not use our website.</p>
+        <p>
+          Intellectual Property. All intellectual property rights related to the content and information presented on our website belong to FullClima or third-party licensors. No intellectual property rights are granted through the use of our website or services.
+        </p>
+        <p>Use of the Website
+          You are authorized to use our website for legal purposes and in accordance with these Terms. It is not allowed to use our website for illegal, defamatory, offensive activities, activities that infringe the rights of third parties, or activities that violate any applicable laws.
+        </p>
+        <p>Privacy
+          The use of personal information provided through our website is governed by our Privacy Policy. By using our website, you accept our treatment of personal information in accordance with that policy.
+        </p>
+        <p>Limitation of Liability
+          FullClima is not responsible for direct, indirect, incidental, special, or consequential damages that may arise from the use of our website or the inability to access it.
+        </p>
+        <p>Third-Party Links
+          Our website may contain links to third-party websites. These links are provided solely for your convenience. We have no control over the content of these websites and assume no responsibility for them.
+        </p>
+        <p>
+          Modifications
+          FullClima reserves the right to modify, suspend, or discontinue any aspect of our website or services at any time and without prior notice.
+        </p>
+      </p>
     </div>
+  </div>
+</div>
