--- a/app/views/terms/index.html.erb
+++ b/app/views/terms/index.html.erb
@@ -1,29 +1,27 @@
 <div class="container">
   <div class="container__card">
-    <h3 class="container__h3">Términos y Condiciones Legales de FullClima</h3>
-    <div class="card-body">
-      <p class="card-text">
-        <p>Welcome to FullClima. These legal terms ("Terms") establish the legal rights and obligations governing the use of our website and related services. By accessing or using our website, you are agreeing to these Terms and agreeing to comply with all applicable laws and regulations. If you do not agree with any of these terms, please do not use our website.</p>
-        <p>
-          Intellectual Property. All intellectual property rights related to the content and information presented on our website belong to FullClima or third-party licensors. No intellectual property rights are granted through the use of our website or services.
-        </p>
-        <p>Use of the Website
-          You are authorized to use our website for legal purposes and in accordance with these Terms. It is not allowed to use our website for illegal, defamatory, offensive activities, activities that infringe the rights of third parties, or activities that violate any applicable laws.
-        </p>
-        <p>Privacy
-          The use of personal information provided through our website is governed by our Privacy Policy. By using our website, you accept our treatment of personal information in accordance with that policy.
-        </p>
-        <p>Limitation of Liability
-          FullClima is not responsible for direct, indirect, incidental, special, or consequential damages that may arise from the use of our website or the inability to access it.
-        </p>
-        <p>Third-Party Links
-          Our website may contain links to third-party websites. These links are provided solely for your convenience. We have no control over the content of these websites and assume no responsibility for them.
-        </p>
-        <p>
-          Modifications
-          FullClima reserves the right to modify, suspend, or discontinue any aspect of our website or services at any time and without prior notice.
-        </p>
-      </p>
-    </div>
+    <h2 class="container__h2 mb-3">Terms and Legal Conditions of FullClima
+    </h2>
+    <p class="container__p">
+      Welcome to FullClima. These legal terms ("Terms") establish the legal rights and obligations governing the use of our website and related services. By accessing or using our website, you are agreeing to these Terms and agreeing to comply with all applicable laws and regulations. If you do not agree with any of these terms, please do not use our website.<br>
+      <br>
+      <strong>Intellectual Property.</strong><br>
+      All intellectual property rights related to the content and information presented on our website belong to FullClima or third-party licensors. No intellectual property rights are granted through the use of our website or services.<br>
+      <br>
+      <strong>Use of the Website.</strong><br>
+      You are authorized to use our website for legal purposes and in accordance with these Terms. It is not allowed to use our website for illegal, defamatory, offensive activities, activities that infringe the rights of third parties, or activities that violate any applicable laws.<br>
+      <br>
+      <strong>Privacy.</strong><br>
+      The use of personal information provided through our website is governed by our Privacy Policy. By using our website, you accept our treatment of personal information in accordance with that policy.<br>
+      <br>
+      <strong>Limitation of Liability.</strong><br>
+      FullClima is not responsible for direct, indirect, incidental, special, or consequential damages that may arise from the use of our website or the inability to access it.<br>
+      <br>
+      <strong>Third-Party Links.</strong><br>
+      Our website may contain links to third-party websites. These links are provided solely for your convenience. We have no control over the content of these websites and assume no responsibility for them.<br>
+      <br>
+      <strong>Modifications.</strong><br>
+      FullClima reserves the right to modify, suspend, or discontinue any aspect of our website or services at any time and without prior notice.
+    </p>
   </div>
 </div>
