--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,30 +18,54 @@
 @import "bootstrap";
 
 :root {
+    --background-primary: #163771;
+    --background-card: #fafafa;
+    --border-radius: 0.4rem;
     --navbar: 56px;
-    --border-radius: .4rem;
 }
 
 body {
-    background-color: #163771;
+    background-color: var(--background-primary);
     font-family: 'Roboto', sans-serif;
+}
+
+.navbar {
+    &__a {
+        transition: all .2s cubic-bezier(0.55, 0.055, 0.675, 0.19);
+        display: flex;
+        align-items: center;
+        gap: .5rem;
+
+        &:hover {
+
+            transform: scale(1.05)
+        }
+    }
+
+    &__h3 {
+        font-weight: 700;
+        margin: 0;
+    }
+
+    &__img {
+        width: 2rem;
+    }
 }
 
 .main-container {
     align-items: center;
     display: flex;
     justify-content: center;
-    min-height: 100vh;
-    padding-bottom: 1rem;
-    padding-top: 1rem;
+    min-height: calc(100vh - var(--navbar));
+    padding-bottom: 2rem;
+    padding-top: 2rem;
 }
 
 .container {
 
     &__card {
-        background: #fafafa;
+        background: var(--background-card);
         border-radius: var(--border-radius);
-        padding: 3rem;
         padding: 1.8rem;
         box-shadow: 10px 10px 20px #132f60,
             -10px -10px 20px #0b2655;
@@ -109,15 +133,31 @@ body {
 
 .item-container {
     display: flex;
-    justify-content: space-between;
     gap: 1rem;
+    margin-bottom: 1rem;
 
     &__item {
-        width: 33%;
-        background: #fafafa;
+        width: 33.3%;
+        background: var(--background-card);
         border-radius: var(--border-radius);
         padding: 1.8rem;
     }
+
+    &__h6 {
+        font-size: .9rem;
+    }
+
+    &__block-img {
+        align-content: center;
+        background-color: #ededed;
+        border-radius: var(--border-radius);
+        display: flex;
+        justify-content: center;
+        margin-bottom: 1rem;
+        padding: 1rem;
+        width: 100%;
+    }
+
 }
 
 @media screen and (max-width: 460px) {
@@ -128,8 +168,6 @@ body {
         &__item {
             width: 100%;
         }
-
-
     }
 }
 
@@ -143,6 +181,7 @@ body {
         color: #fafafa;
         font-size: 2rem;
         font-weight: 600;
+        margin: 0;
     }
 }
 
@@ -173,4 +212,36 @@ body {
         width: auto;
     }
 
+}
+
+.container-contact {
+    &__card {
+        background: var(--background-card);
+        border-radius: var(--border-radius);
+        padding: 1.8rem;
+        box-shadow: 10px 10px 20px #132f60,
+            -10px -10px 20px #0b2655;
+    }
+
+
+    &__h2 {
+        font-size: 2rem;
+        font-weight: 700;
+        margin-bottom: 1rem;
+        text-align: center;
+    }
+}
+
+.container-pagination {
+    display: flex;
+    justify-content: center;
+    background-color: #ededed;
+    padding: .5rem;
+    gap: .8rem;
+    text-decoration: none;
+
+    & a {
+
+        text-decoration: none;
+    }
 }
