--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,14 @@
     <%= javascript_importmap_tags %>
   </head>
   <body>
+    <%#  %>
     <nav class="navbar navbar-expand-lg bg-light">
       <div class="container">
-        <a class="navbar-brand" href="/">FullClima 
+        <a class="navbar-brand navbar__a" href="/">
+          <%= image_tag("brand.svg", alt: "Brand Image", class:"navbar__img")  %>
+          <h3 class="navbar__h3">
+            FullClima
+          </h3>
           <% if user_signed_in? %>
             | <%= current_user&.admin&.capitalize %>
           <% end %>
@@ -57,6 +62,7 @@
         </div>
       </div>
     </nav>
+    <%#  %>
     <div class="main-container">
       <%# Message %>
       <% if flash[:success] %>
