--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -154,6 +154,7 @@ body {
         display: flex;
         justify-content: center;
         margin-bottom: 1rem;
+        margin-top: 1rem;
         padding: 1rem;
         width: 100%;
     }
