--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,7 +43,7 @@
                 <a class="nav-link <%= 'active' if current_page?(equipment_index_path) %>" href="<%= equipment_index_path %>">Equipment</a>
               </li>
               <li class="nav-item me-2">
-                <a class="nav-link <%= 'active' if current_page?(mantainers_path) %>" href="<%= mantainers_path %>">Mantainers</a>
+                <a class="nav-link <%= 'active' if current_page?(maintainers_path) %>" href="<%= maintainers_path %>">Maintainers</a>
               </li>
               <li class="nav-item">
                 <%= form_tag destroy_user_session_path, method: :delete, class: "navbar-form" do %>
